--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "redux-devtools": "redux-devtools --open=electron --hostname=localhost --port=8000"
+    "redux-devtools": "redux-devtools --open=electron --hostname=localhost --port=8000",
+    "watch": "webpack --watch --mode development",
+    "build-dev": "webpack --mode development",
+    "build-prod": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "homepage": "../assets/",
   "dependencies": {
     "@dr.pogodin/babel-plugin-react-css-modules": "^6.13.1",
+    "@material-ui/core": "^4.12.4",
+    "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.2.5",
     "@wordpress/components": "^27.6.0",
     "@wordpress/core-data": "^6.35.0",
@@ -20,6 +26,9 @@
     "@wordpress/dom-ready": "^3.58.0",
     "@wordpress/element": "^5.35.0",
     "@wordpress/notices": "^4.26.0",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "flowbite-react": "^0.10.1",
     "html-to-react": "^1.7.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -27,11 +36,15 @@
     "react-component-transition": "^2.1.2",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-inlinesvg": "^4.1.3",
     "react-loader-spinner": "^6.1.6",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "^5.0.1",
+    "react-use-pagination": "^2.0.1",
+    "simple-jwt-login": "^0.1.5",
     "styled-components": "^6.1.11",
     "swr": "^2.2.5",
     "vertical-timeline-component-for-react": "^1.0.7"
@@ -43,15 +56,26 @@
     "@eslint/compat": "^1.0.3",
     "@eslint/js": "^9.4.0",
     "@svgr/webpack": "^8.1.0",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
-    "css-loader": "^7.1.1",
+    "css-loader": "^7.1.2",
+    "daisyui": "^4.12.10",
     "eslint": "^9.4.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "file-loader": "^6.2.0",
     "globals": "^15.4.0",
+    "html-bundler-webpack-plugin": "^3.15.1",
+    "html-webpack-plugin": "^5.6.0",
+    "lodash": "^4.17.21",
+    "postcss": "^8.4.39",
+    "postcss-import": "^16.1.0",
+    "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.4",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-livereload-plugin": "^3.0.2",
+    "webpack-merge": "^6.0.1"
   }
 }
