--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "homepage": "../assets/",
   "dependencies": {
     "@dr.pogodin/babel-plugin-react-css-modules": "^6.13.1",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@material-ui/core": "^4.12.4",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.2.5",
