Added File upload to transcriptions assistant. Minor fixes. Enhanced whatsap webook creation

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^5.3.3",
     "flowbite-react": "^0.10.1",
     "html-to-react": "^1.7.0",
+    "ImproveYourAiChatbotFrontend": "github:redirect11/ImproveYourAIChatbotFrontend",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chatbot-kit": "^2.2.2",
@@ -74,6 +75,7 @@
     "postcss": "^8.4.39",
     "postcss-import": "^16.1.0",
     "postcss-loader": "^8.1.1",
+    "react-bus": "^3.0.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.4",
     "webpack": "^5.91.0",
