--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "flowbite-react": "^0.10.1",
     "html-to-react": "^1.7.0",
     "ImproveYourAiChatbotFrontend": "github:redirect11/ImproveYourAIChatbotFrontend",
-    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chatbot-kit": "^2.2.2",
     "react-component-transition": "^2.1.2",
@@ -72,10 +71,12 @@
     "html-bundler-webpack-plugin": "^3.15.1",
     "html-webpack-plugin": "^5.6.0",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "postcss": "^8.4.39",
     "postcss-import": "^16.1.0",
     "postcss-loader": "^8.1.1",
     "react-bus": "^3.0.0",
+    "react-moment": "^1.1.3",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.4",
     "webpack": "^5.91.0",
